# pendora-cli

./: .gitignore  Cargo.toml  README.md
new/: Pendorafile
new/src/: MyAPI.pendora
new/src/methods/init/: getMyObject.pendora
new/src/methods/mut/: setMyObject.pendora
new/src/objects/: MyObject.pendora
src/: main.rs  pendorafile.rs  project_creation.rs
src/cmd/: build.rs  create.rs  init.rs  mod.rs
src/transpile/: mod.rs
src/transpile/rust/: constants.rs  conversions.rs  mod.rs
src/utils/: files.rs
